# stm32l4xx-hal

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Embed.toml  README.md  memory.x  rustfmt.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml  ci_dac.yml  ci_opamp.yml  clippy.yml  clippy_dac.yml  clippy_opamp.yml  rustfmt_dac.yml  rustfmt_opamp.yml
examples/: README.md  adc.rs  adc_dma.rs  adc_dma_cont.rs  adc_dma_seq.rs  adc_dma_trigger_tim2.rs  adc_injectedsequence.rs  adc_opamp1.rs  adc_timer2_dma_seq.rs  audio.rs  blinky.rs  can-loopback.rs  comparator.rs  crc.rs  dac.rs  i2c.rs  i2c_write.rs  irq_button.rs  lptim_rtic.rs  oled.rs  opamp_ext.rs  opamp_pga.rs  otg_fs_serial.rs  pll_config.rs  pwm.rs  qspi.rs  rng.rs  rtc.rs  rtc_alarm.rs  rtfm_frame_serial_dma.rs  rtic_frame_serial_dma.rs  serial.rs  serial_dma.rs  serial_dma_partial_peek.rs  serial_dma_us2.rs  serial_echo_rtic.rs  serial_half_duplex.rs  serial_hw_flow.rs  serial_lpuart1_rtic.rs  serial_vcom.rs  (+7 more)
src/: adc.rs  bb.rs  can.rs  clocks.rs  comp.rs  crc.rs  dac.rs  datetime.rs  delay.rs  dma.rs  dmamux.rs  exti.rs  flash.rs  flash_mem.rs  gpio.old.rs  gpio.rs  i2c.rs  lib.rs  low_power.rs  lptim.rs  lptimer.rs  opamp.rs  otg_fs.rs  prelude.rs  pwm.rs  pwr.rs  qspi.rs  rcc.old.rs  rcc.rs  rng.rs  rtc.rs  sdmmc.rs  serial.rs  signature.rs  spi.rs  time.rs  timer.rs  tsc.rs  usb.rs  watchdog.rs
src/alternate_functions/: mod.rs  stm32l452.rs
src/feature/: mod.rs  peripherals.rs
src/gpio/: convert.rs  erased.rs  exti.rs  partially_erased.rs
src/rcc/: enable.rs
src/rtc/: rtc2.rs  rtc3.rs  traits.rs
src/sai/: i2s.rs  mod.rs
src/traits/: flash.rs  i2s.rs  mod.rs  opamp.rs
tools/: check.py
tools/feature_tables/: Cargo.toml
tools/feature_tables/src/: main.rs
