[package]
name = "stm32l4xx-hal"
version = "0.6.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
description = "Hardware abstraction layer for the stm32l4xx chips"
keywords = ["no-std", "stm32l4xx", "stm32l4", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/MabezDev/stm32l4xx-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
nb = "0.1.1"
stm32l4 = "0.13.0"
as-slice = "0.1"
generic-array = "0.13"

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_2x16"]
optional = true

[package.metadata.docs.rs]
features = ["rt", "stm32l4x2", "stm32-usbd"]

[features]
rt = ["stm32l4/rt"]
stm32l4x1 = ["stm32l4/stm32l4x1"]
stm32l4x2 = ["stm32l4/stm32l4x2"]
stm32l4x3 = ["stm32l4/stm32l4x3"]
stm32l4x5 = ["stm32l4/stm32l4x5"]
stm32l4x6 = ["stm32l4/stm32l4x6"]
unproven = ["embedded-hal/unproven"]

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.5"
cortex-m-rt = "0.6.12"
usb-device = "0.2.3"
usbd-serial = "0.1.0"
heapless = "0.5"
cortex-m-rtic = "0.5.5"

[dev-dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dev-dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true


[[example]]
name = "adc"
required-features = ["rt", "stm32l4x3"]

[[example]]
name = "irq_button"
required-features = ["rt"]

[[example]]
name = "qspi"
required-features = ["rt", "stm32l4x5"]

[[example]]
name = "rng"
required-features = ["unproven"]

[[example]]
name = "rtc_alarm"
required-features = ["rt"]

[[example]]
name = "rtic_frame_serial_dma"
required-features = ["rt", "stm32l4x2"]

[[example]]
name = "serial_echo_rtic"
required-features = ["rt", "stm32l4x3"]

[[example]]
name = "timer"
required-features = ["rt"]

[[example]]
name = "usb_serial"
required-features = ["rt", "stm32l4x2", "stm32-usbd"]
