[package]
name = "stm32l4xx-hal"
version = "0.6.0"
authors = ["Scott Mabin <MabezDev@gmail.com>"]
description = "Hardware abstraction layer for the stm32l4xx chips"
keywords = ["no-std", "stm32l4xx", "stm32l4", "embedded", "embedded-hal"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/MabezDev/stm32l4xx-hal"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]
edition = "2018"

[dependencies]
cortex-m = "0.7"
nb = "0.1.1"
stm32l4 = "0.14.0"
embedded-dma = "0.1"
bxcan = ">=0.4, <0.6"

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[dependencies.cast]
version  = "0.2.2"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.6.0"
optional = true

[dependencies.synopsys-usb-otg]
version = "0.2.4"
features = ["cortex-m", "fs"]
optional = true

[package.metadata.docs.rs]
features = ["rt", "stm32l432", "stm32-usbd"]

[features]
rt = ["stm32l4/rt"]
unproven = ["embedded-hal/unproven"]
otg_fs = ["synopsys-usb-otg"]

# private features are for internal use only
# L4 PAC is currently feature gated on the stm32L4 line
private_pac_stm32l4x1 = ["stm32l4/stm32l4x1"]
private_pac_stm32l4x2 = ["stm32l4/stm32l4x2"]
private_pac_stm32l4x3 = ["stm32l4/stm32l4x3"]
private_pac_stm32l4x5 = ["stm32l4/stm32l4x5"]
private_pac_stm32l4x6 = ["stm32l4/stm32l4x6"]
private_pac_stm32l4x7 = []
private_pac_stm32l4x9 = []

# Devices can also be grouped by peripheral set (PAC may need similar features?)
private_product_L41_L42 = []
private_product_L43_L44 = []
private_product_L45_L46 = []
private_product_L47_L48 = []
private_product_L49_L4A = []
# L4+ products
private_product_L4P_L4Q = []
private_product_L4R_L4S = []

# AES is available only for L4(A/8/6/4/2) and L4+(Q/S)
# these devices are otherwise identical the the odd numbered pair
private_aes = []
# SHA-256 is only present on L4A and the L4+(Q/S)
private_sha256 = []

# L4x1
stm32l431 = [ "private_pac_stm32l4x1", "private_product_L43_L44" ]
stm32l451 = [ "private_pac_stm32l4x1", "private_product_L45_L46" ]
stm32l471 = [ "private_pac_stm32l4x1", "private_product_L47_L48" ]

# L4x2
stm32l412 = [ "private_pac_stm32l4x2", "private_product_L41_L42" ]
stm32l422 = [ "private_pac_stm32l4x2", "private_product_L41_L42", "private_aes" ]
stm32l432 = [ "private_pac_stm32l4x2", "private_product_L43_L44" ]
stm32l442 = [ "private_pac_stm32l4x2", "private_product_L43_L44", "private_aes" ]
stm32l452 = [ "private_pac_stm32l4x2", "private_product_L45_L46" ]
stm32l462 = [ "private_pac_stm32l4x2", "private_product_L45_L46", "private_aes" ]

# L4x3
stm32l433 = [ "private_pac_stm32l4x3", "private_product_L43_L44" ]
stm32l443 = [ "private_pac_stm32l4x3", "private_product_L43_L44" ]

# L4x5
stm32l475 = [ "private_pac_stm32l4x5", "private_product_L47_L48" ]
## L4+ series? PAC doesn't currently support?
#stm32l4p5 = [ "private_pac_stm32l4x5", "private_product_L4P_L4Q" ]
#stm32l4q5 = [ "private_pac_stm32l4x5", "private_product_L4P_L4Q", "private_aes", "private_sha256" ]
#stm32l4r5 = [ "private_pac_stm32l4x5", "private_product_L4R_L4S" ]
#stm32l4s5 = [ "private_pac_stm32l4x5", "private_product_L4R_L4S", "private_aes", "private_sha256" ]

# L4x6
stm32l476 = [ "private_pac_stm32l4x6", "private_product_L47_L48" ]
stm32l486 = [ "private_pac_stm32l4x6", "private_product_L47_L48" ]
stm32l496 = [ "private_pac_stm32l4x6", "private_product_L49_L4A" ]
stm32l4A6 = [ "private_pac_stm32l4x6", "private_product_L49_L4A", "private_aes", "private_sha256" ]

## L4x7
## L4+ series? PAC doesn't currently support?
#stm32l4r7 = [ "private_pac_stm32l4x7", "private_product_L4R_L4S" ]
#stm32l4s7 = [ "private_pac_stm32l4x7", "private_product_L4R_L4S", "private_aes", "private_sha256" ]

## L4x9
## L4+ series? PAC doesn't currently support?
#stm32l4r9 = [ "private_pac_stm32l4x9", "private_product_L4R_L4S" ]
#stm32l4s9 = [ "private_pac_stm32l4x9", "private_product_L4R_L4S", "private_aes", "private_sha256" ]

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
cortex-m-semihosting = "0.3.5"
cortex-m-rt = "0.7"
usb-device = "0.2.3"
usbd-serial = "0.1.0"
heapless = "0.5"

[dev-dependencies.cortex-m-rtic]
version = "0.5.9"
default-features = false
features = ["cortex-m-7"]

[dev-dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dev-dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true


[[example]]
name = "adc"
required-features = ["rt", "private_pac_stm32l4x3"]

[[example]]
name = "can-loopback"
required-features = ["rt", "private_pac_stm32l4x1"]

[[example]]
name = "irq_button"
required-features = ["rt"]

[[example]]
name = "qspi"
required-features = ["rt", "private_pac_stm32l4x5"]

[[example]]
name = "rng"
required-features = ["unproven"]

[[example]]
name = "rtc_alarm"
required-features = ["rt"]

[[example]]
name = "rtic_frame_serial_dma"
required-features = ["rt", "private_pac_stm32l4x2"]

[[example]]
name = "spi_dma_rxtx"
required-features = ["rt", "private_pac_stm32l4x2"]

[[example]]
name = "serial_echo_rtic"
required-features = ["rt", "private_pac_stm32l4x3"]

[[example]]
name = "timer"
required-features = ["rt"]

[[example]]
name = "usb_serial"
required-features = ["rt", "private_pac_stm32l4x2", "stm32-usbd"]

[[example]]
name = "otg_fs_serial"
required-features = ["rt", "private_pac_stm32l4x6", "otg_fs"]

[[example]]
name = "i2c_write"
required-features = ["private_pac_stm32l4x1"]

[[example]]
name = "lptim_rtic"
required-features = ["rt", "private_pac_stm32l4x2"]

[[example]]
name = "adc_dma"
required-features = ["rt", "private_pac_stm32l4x1"]
